<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:paddingStart="10dp"
    android:paddingRight="10dp"
    tools:ignore="RtlHardcoded">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_enter"
            android:inputType="textEmailAddress" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_enter"
            android:inputType="textPassword" />


        <Button
            android:text="@string/title_activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"/>
    </LinearLayout>


    <TextView
        android:id="@+id/textViewLogin"
        android:text="@string/already"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_below="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
