<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.45"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="6dp"
        android:weightSum="1"
        tools:ignore="InefficientWeight,UseCompoundDrawables">

        <ImageView
            android:id="@+id/user_profile"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="33dp"
            android:contentDescription="@string/profile_photo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/my_page_disabled" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="59dp"
            android:layout_height="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="9.67dp"
            android:layout_weight="0"
            android:contentDescription="@string/profile_name"
            android:gravity="center_horizontal"
            android:text="@string/profile_example"
            tools:ignore="InefficientWeight,NestedWeights" />

        <ImageButton
            android:id="@+id/photoButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:contentDescription="@string/profile_edit"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/profile_photo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:layout_weight="0.52"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46.33dp"
            android:layout_marginLeft="46dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="61.67dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46.33dp"
            android:layout_marginLeft="46dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="61.67dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/birthday" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46.33dp"
            android:layout_marginLeft="46dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="61.67dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15.33dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/logoutButton"
                android:layout_width="145dp"
                android:layout_height="22.67dp"
                android:layout_marginRight="8.33dp"
                android:background="#00000000"
                android:contentDescription="@string/logout"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logout"
                tools:ignore="RtlHardcoded" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="145dp"
                android:layout_height="22.67dp"
                android:layout_marginRight="8.33dp"
                android:background="#00000000"
                android:contentDescription="@string/userdelete"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/out"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.45"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="#00000000"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back" />
    </LinearLayout>


</LinearLayout>
