<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="6dp"
        android:weightSum="1"
        tools:ignore="InefficientWeight,UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="33dp"
            android:contentDescription="@string/profile_photo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/my_page_disabled" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="59dp"
            android:layout_height="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="9.67dp"
            android:layout_weight="0"
            android:contentDescription="@string/profile_name"
            android:gravity="center_horizontal"
            android:text="@string/profile_example"
            tools:ignore="InefficientWeight,NestedWeights" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="149dp"
            android:layout_height="20.33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile_edit"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/profile_edit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="66dp"
            android:layout_height="12dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@android:string/ok"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/timeline"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingRight="20dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="49dp"
                android:layout_height="13dp"
                android:layout_weight="0.00"
                android:background="#00000000"
                android:contentDescription="@android:string/search_go"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/sort_date"
                tools:ignore="InefficientWeight" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="54dp"
                android:layout_height="13dp"
                android:background="#00000000"
                android:contentDescription="@android:string/search_go"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/sort_lately" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="104dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:contentDescription="@string/addwriting"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/no_post" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_main_result"
        android:layout_width="match_parent"
        android:layout_height="0dp" />


</LinearLayout>